--- a/web/templates/web/base.html
+++ b/web/templates/web/base.html
@@ -11,6 +11,8 @@
         {% if user.is_anonymous %}
             <a href="{% url 'registration' %}">Регистрация</a>
             <a href="{% url 'login' %}">Вход</a>
+        {% else %}
+            <a href="{% url 'logout' %}">Выход</a>
         {% endif %}
     </nav>
     {% block content %}
